--- a/index.html
+++ b/index.html
@@ -30,11 +30,23 @@
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section class = "project-item" >
-          <img src="Images/thumbnail-2.jpg" alt="description of image">
+          <img src="Images/download.jpg" alt="description of image" >
           <h3>Simulated Filesystem</h3>
           <p>Created a filesystem in C that can create files/directories and incorporate a series of UNIX commands such
             as cd, ls, pwd, rm, and rmfs without creating any memory leaks.</p>
-          <a href="https://github.com/ahamad2270" target="_blank" class = "btn">View project</a>
+          <a href="https://github.com/ahamad2270/Simulated-Filesystem-Project" target="_blank" class = "btn">View project</a>
+        </section>
+        <section class = "project-item" >
+          <img src="Images/Weather.png" alt="description of image">
+          <h3>Weather App</h3>
+          <p>Created a weather app using HTML, CSS, and JavaScript that implemented the openweathermap.org api. </p>
+          <a href="https://ahamad2270.github.io/Weather-App/" target="_blank" class = "btn">View project</a>
+        </section>
+        <section class = "project-item" >
+          <img src="Images/images.jpg" alt="description of image">
+          <h3>Snake Game</h3>
+          <p>Created a version of the classic Snake game using HTML, CSS, and JavaScript. </p>
+          <a href="https://ahamad2270.github.io/Snake-Game/" target="_blank" class = "btn">View project</a>
         </section>
         <!-- End of Project block. -->
       </div>
